compiler/src/syntax/snapshots/parse_assignment.snap
---
source: compiler/src/syntax/mod.rs
description: "x : 123"
expression: result
---
AssignmentNode {
    pattern: VariablePatternNode {
        variable: "x",
    },
    value: NumberExpressionNode {
        value: "123",
    },
}
