compiler/src/syntax/snapshots/parse_call_expression.snap
---
source: compiler/src/syntax/mod.rs
description: f x y
expression: result
---
CallExpressionNode {
    function: VariableExpressionNode {
        variable: "f",
    },
    inputs: [
        VariableExpressionNode {
            variable: "x",
        },
        VariableExpressionNode {
            variable: "y",
        },
    ],
}
