compiler/src/syntax/snapshots/parse_complex_or_pattern.snap
---
source: compiler/src/syntax/mod.rs
description: x or y or z
expression: result
---
OrPatternNode {
    patterns: [
        VariablePatternNode {
            variable: "x",
        },
        VariablePatternNode {
            variable: "y",
        },
        VariablePatternNode {
            variable: "z",
        },
    ],
}
