compiler/src/syntax/snapshots/parse_do_expression.snap
---
source: compiler/src/syntax/mod.rs
description: do foo
expression: result
---
DoExpressionNode {
    input: VariableExpressionNode {
        variable: "foo",
    },
}
