compiler/src/syntax/snapshots/parse_empty_collection_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "(,)"
expression: result
---
CollectionExpressionNode {
    elements: [],
}
