compiler/src/syntax/snapshots/parse_expression_statement.snap
---
source: compiler/src/syntax/mod.rs
description: "123"
expression: result
---
ExpressionStatementNode {
    expression: NumberExpressionNode {
        value: "123",
    },
}
