compiler/src/syntax/snapshots/parse_format_expression.snap
---
source: compiler/src/syntax/mod.rs
description: "\"Hello, _!\" name"
expression: result
---
FormatExpressionNode {
    string: "Hello, _!",
    inputs: [
        VariableExpressionNode {
            variable: "name",
        },
    ],
}
