compiler/src/syntax/snapshots/parse_generic_trait_definition.snap
---
source: compiler/src/syntax/mod.rs
description: "Foo : value => trait (value -> Number)"
expression: result
---
TraitDefinitionNode {
    comments: [],
    attributes: [],
    name: "Foo",
    parameters: [
        TypeParameterNode {
            name: "value",
            infer: false,
            value: None,
        },
    ],
    ty: FunctionTypeNode {
        inputs: [
            TypeParameterNode {
                name: "value",
                infer: false,
                value: None,
            },
        ],
        output: NamedTypeNode {
            name: "Number",
            parameters: [],
        },
    },
    constraints: [],
}
