compiler/src/syntax/snapshots/parse_multi_input_function_expression.snap
---
source: compiler/src/syntax/mod.rs
description: x y -> z
expression: result
---
FunctionExpressionNode {
    inputs: [
        VariablePatternNode {
            variable: "x",
        },
        VariablePatternNode {
            variable: "y",
        },
    ],
    output: VariableExpressionNode {
        variable: "z",
    },
}
